--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-scripts": "4.0.3",
+    "sass": "^1.35.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
