--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
     "web-vitals": "^1.0.1"
